--- a/gallery.html
+++ b/gallery.html
@@ -4,27 +4,30 @@
 		<title>Kamric</title>
 		<link rel="stylesheet" href="_css/bootstrap.min.css">
 		<link rel="stylesheet" href="_css/styles.css">
+		<meta name="viewport" content="width=device-width,minimum-scale=1">
+    	<link rel="stylesheet" href="_css/jquery.sidr.bare.css">
+		<script type="text/javascript" src="_js/jquery-1.11.3.min.js"></script>
+    	<script src="_js/jquery.sidr.min.js"></script>
+		<script src="_js/scripts.js"></script>
 	</head>
 	<body>
-		<div id="container">
+		<div id="main_container">
+			<a id="simple-menu" href="#sidr"><img id="hamburger_menu_toggle" src="_img/MenuIcon4.png"></a>
+			<div id="sidr">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="gallery.html">GALLERY</a></li>
+					<li><a href="people_of_kamric.html">ABOUT US</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+					<li><a href="login.html">LOGIN</a></li>
+				</ul>
+			</div>
 			<header>
 				<div class="logo">
 					<strong>KAMRIC</strong>
 					interior design & Staging
 				</div>
 			</header>
-			<nav id="mainmenu">
-				<div class="inset">
-				<div class="glyphicon glyphicon-menu-hamburger"></div>
-					<div class="menu">
-						<a href="index.html">HOME</a>
-						<a href="gallery.html"class="chosen">GALLERY</a>
-						<a href="people_of_kamric.html">ABOUT US</a>
-						<a href="contact.html">CONTACT</a>
-						<a href="login.html">LOGIN</a>
-					</div>
-				</div>
-			</nav>
 		<div id="lightboxcontainer">
 			<div id="gallery">
 			<div class="item"> <img src="_img/healey1.jpg"> </div>
